<resources>
    <string name="app_name">Gestor de Formularios</string>
    <string name="action_settings">Ajustes</string>
    <string name="settings_name">Ajustes de la Aplicación</string>

    <!-- Títulos de las actividades -->
    <string name="title_activity_single_answer">Respuesta Única</string>
    <string name="title_activity_map_answer">Localización</string>
    <string name="title_activity_photo_answer">Fotografía</string>
    <string name="title_activity_multiple_choice_answer" translatable="false">Respuesta Múltiple</string>
    <string name="title_activity_text_answer" translatable="false">Texto Libre</string>
    <string name="title_activity_select_form" translatable="false">SelectFormActivity</string>
    <string name="title_activity_delete_form" translatable="false">DeleteFormActivity</string>
    <string name="title_activity_review_form" translatable="false">ReviewFormActivity</string>
    <string name="title_activity_bar_code_answer">Código de Barras</string>
    <string name="title_activity_name_and_description_design">Nuevo formulario</string>
    <string name="title_activity_select_question_type">Tipos de pregunta</string>
    <string name="title_activity_only_question_text">Nueva Pregunta</string>
    <string name="title_activity_question_text_and_answers">Nueva Pregunta</string>
    <string name="bar_code_reading">Lectura de Código de Barras</string>


    <!-- Actividades Principales -->
    <string name="main_activity_text">Opciones Disponibles</string>
    <string name="design_new_form">Diseñar formulario</string>
    <string name="fill_form">Cumplimentar formulario</string>
    <string name="modify_form">Modificar formulario</string>
    <string name="view_form">Ver formulario</string>
    <string name="delete_form">Eliminar formulario</string>
    <string name="sync">Sincronización</string>
    <string name="available_forms">Formularios Disponibles</string>
    <string name="form_user">Usuario</string>
    <string name="annotations">Comentarios</string>
    <string name="version_update">Existe una nueva versión de la aplicación</string>

    <!-- Diseño de formularios -->
    <string name="fields_incomplete">Debe completar todos los campos para continuar</string>
    <string name="form_name">Nombre del formulario</string>
    <string name="form_description">Descripción del formulario</string>
    <string name="form_author">Autor del formulario</string>
    <string name="name">Nombre</string>
    <string name="tracking_mode">Modo de tracking</string>
    <string name="question_type">Tipo de Pregunta</string>
    <string name="question_text">Texto a mostrar al usuario</string>
    <string name="new_answer_text">Respuesta</string>
    <string name="question_mandatory">Pregunta con respuesta obligatoria</string>
    <string name="no_answers">Debe introducir al menos dos respuestas</string>
    <string name="form_saved">Formulario guardado correctamente</string>
    <string name="form_not_saved">Error al guardar el formulario</string>
    <string name="existing_form">Ya existe un formulario con el nombre introducido</string>
    <string name="no_mode_sent">Es necesario indicar el modo al llamar a la actividad</string>

    <!-- Gestión de formularios -->
    <string name="attention">Atención</string>
    <string name="delete_form_manager">Eliminación de Formularios</string>
    <string name="review_form">Revisión de Formularios</string>
    <string name="delete_confirmation">Se va a eliminar el formulario seleccionado.\n¿Desea continuar?</string>
    <string name="delete_user_forms_confirmation">Existen formularios cumplimentados por el usuario del tipo seleccionado, los cuales serán eliminados.\n¿Desea continuar?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="select_form_to_view">Debe seleccionar el formulario que desea ver</string>
    <string name="select_form">Debe seleccionar un formulario a eliminar</string>
    <string name="type">Tipo</string>
    <string name="date">Fecha</string>
    <string name="description">Descripción</string>
    <string name="form_end">Fin del formulario</string>

    <!-- Sincronización -->
    <string name="form_design_upload">Subir Diseño de Formulario</string>
    <string name="form_design_download">Descargar Diseño de Formulario</string>
    <string name="select_form_sync">Seleccione un formulario</string>
    <string name="connect_title">Conexión</string>
    <string name="connect_message">Conexión en curso</string>


    <!-- Actividad Preferencias -->
    <string name="server_preferences">Ajustes del Servidor</string>
    <string name="tracking_preferences">Ajustes de Tracking</string>
    <string name="server">Servidor:</string>
    <string name="user">Usuario:</string>
    <string name="pass">Contraseña:</string>
    <string name="save">Guardar</string>
    <string name="saved">Se han guardado los ajustes</string>
    <string name="act_time">Tiempo de Actualización (segundos):</string>
    <string name="act_distance">Distancia de Actualización (metros):</string>
    <string name="server_name_error">La dirección del servidor debe terminar en /</string>
    <string name="server_user_error">Debe introducir el usuario de la base de datos</string>
    <string name="server_passworrd_error">Debe introducir la contraseña de la base de datos</string>


    <!-- BBDD -->
    <string name="dbActualized">Se ha actualizado la base de datos</string>
    <string name="dbNotActualized">Se ha producido un error al actualizar la base de datos</string>
    <string name="unique_question">Respuesta única</string>
    <string name="multiple_choice_question">Respuesta múltiple </string>
    <string name="photo_question">Fotografía</string>
    <string name="map_question">Selección de ubicación</string>
    <string name="text_question">Texto libre</string>

    <!-- Errores -->
    <string name="no_form_found">No se ha encontrado formulario</string>
    <string name="question_select_error">Error al seleccionar el tipo de pregunta</string>
    <string name="question_error">Error al recuperar la pregunta</string>
    <string name="question_type_error">Error al recuperar el tipo de pregunta</string>
    <string name="answers_error">Error al recuperar las respuetas</string>
    <string name="mandatory_answer">Debe responder la pregunta para continuar</string>
    <string name="delete_form_error" translatable="false">Se ha producido un error al eleiminar el formulario</string>

    <!-- Consultas -->
    <string name="select_review_forms" translatable="false">SELECT UF.ID_USER_FORM, FD.FORM_NAME, UF.CREATE_DATE, UF.FORM_DESCRIPTION FROM  USER_FORMS UF, FORM_DESIGN FD WHERE UF.ID_FORM = FD.ID_FORM_DESIGN</string>
    <string name="select_forms" translatable="false">SELECT ID_FORM_DESIGN, FORM_NAME FROM FORM_DESIGN</string>
    <string name="title_activity_select_sync_design_form" translatable="false">SelectSyncDesignFormActivity</string>


</resources>
