<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.novotec.formmanager.forms.SelectFormActivity"
    tools:showIn="@layout/activity_select_form"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/available_forms"
        android:id="@+id/textViewAvailableForms"
        android:gravity="center" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ListView
                android:layout_width="match_parent"
                android:clickable="true"
                android:layout_height="185dp"
                android:id="@+id/listViewFormSelect"
                android:choiceMode="singleChoice"
                android:listSelector="@color/selectedItemList"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/form_user"
                android:id="@+id/textView11"
                android:gravity="center" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/editTextUserSelect" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/annotations"
                android:id="@+id/textView12"
                android:gravity="center" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="124dp"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/editTextComments" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
